--- a/client/CarteAfrique.html
+++ b/client/CarteAfrique.html
@@ -103,3 +103,81 @@
     </td> 
     </tr>
     <tr>
+    
+ <!-- Zone pour l'affichage dynamique des descriptions -->
+  <p id="description"></p>
+
+  </div>
+ </body>
+
+
+<script>
+
+// Création d'une carte dans la balise div "map",
+// et position de la vue sur un point donné et un niveau de zoom
+var map = L.map('map').setView([5,20], 2.5);
+
+// Ajout d'une couche de dalles OpenStreetMap
+L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+     }).addTo(map);
+     
+// Fonction appelée au chargement de la page
+function load_data () {
+
+  // objet pour l'envoi d'une requête Ajax
+  var xhr = new XMLHttpRequest();
+
+  // fonction appelée lorsque la réponse à la requête (liste des capitales) sera arrivée
+  xhr.onload = function() {
+
+    // transformation des données renvoyées par le serveur
+    // responseText est du type string, data est une liste
+    var data = JSON.parse(this.responseText);
+
+    // boucle sur les capitales
+    for ( n = 0; n < data.length; n++ ) {
+      // insertion d'un marqueur à la position de la capitale,
+      // attachement d'une popup, capture de l'événement 'clic'
+      // ajout d'une propriété personnalisée au marqueur
+      L.marker([data[n].lat,data[n].lon]).addTo(map)
+       .bindPopup('Lieu = '+data[n].name)
+       .addEventListener('click',OnMarkerClick)
+       .idnum = data[n].id;
+    }
+  };
+
+  // Envoi de la requête Ajax pour la récupération de la liste des capitales
+  xhr.open('GET','/location',true);
+  xhr.send();
+}
+
+// Fonction appelée lors d'un clic sur un marqueur
+function OnMarkerClick (e) {
+
+  // objet pour l'envoi d'une requête Ajax
+  var xhr = new XMLHttpRequest();
+
+  // fonction appelée lorsque la réponse à la requête (description d'une capitale) sera arrivée
+  xhr.onload = function() {
+
+    // transformation des données renvoyées par le serveur
+    // responseText est du type string, data est un objet
+    var data = JSON.parse(this.responseText);
+
+    // affichage dans la zone 'description' du nom (reprise dans le popup)
+    // et de la description récupérée par l'appel au serveur
+    description.innerHTML =  '<b><i>' + e.target.getPopup().getContent() + '</i></b><br>'+ data.desc;
+  };
+
+  // Le numéro de la capitale est récupéré via la propriété personnalisée du marqueur
+  var idnum = e.target.idnum
+
+  // Envoi de la requête Ajax pour la récupération de la description de la capitale de numéro idnum
+  xhr.open('GET','/description/'+idnum,true);
+  xhr.send();
+}
+</script>
+
+
+
