--- a/client/CarteAfrique.html
+++ b/client/CarteAfrique.html
@@ -179,5 +179,13 @@ function OnMarkerClick (e) {
 }
 </script>
 
+<div id="country_data" class="hidden">
+ <h1 id="country_name"></h1>
+ <div><span class="label">Country:</span><a id="wp" href=""></a></div>
+ <div><span class="label">Capital:</span><a id="capital" href=""></a></div>
+ <div><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
+ <div><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
+ <img id="flag" src="">
+</div>
 
 
