--- a/client/CarteAfrique.html
+++ b/client/CarteAfrique.html
@@ -16,7 +16,7 @@
     <tr>
     <td>
   <!-- Zone pour l'insertion de la carte OSM via Leaflet -->
-  <div id="map" style="margin-bottom:1.33em"></div>  
+  <div id="map" style="margin-bottom:1.33em"></div>
     </td>
     <td>
     <table border='0'>
@@ -110,12 +110,16 @@ var map = L.map('map').setView([5,20], 2.5);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
      attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
      }).addTo(map);
+
+window.country_data.style.display = 'none'
      
 // Fonction appelée au chargement de la page
 function load_data () {
 
   // objet pour l'envoi d'une requête Ajax
   var xhr = new XMLHttpRequest();
+
+
 
   // fonction appelée lorsque la réponse à la requête (liste des capitales) sera arrivée
   xhr.onload = function() {
@@ -129,17 +133,21 @@ function load_data () {
       // insertion d'un marqueur à la position de la capitale,
       // attachement d'une popup, capture de l'événement 'clic'
       // ajout d'une propriété personnalisée au marqueur
-      L.marker([data[n].lat,data[n].lon]).addTo(map)
+      L.marker([data[n].latitude,data[n].longitude]).addTo(map)
        .bindPopup('Lieu = '+data[n].name)
        .addEventListener('click',OnMarkerClick)
-       .idnum = data[n].id;
+       .idnum=data[n].id; // idnum=data[n].id
     }
   };
-
   // Envoi de la requête Ajax pour la récupération de la liste des capitales
   xhr.open('GET','/location',true);
+
   xhr.send();
 }
+
+
+
+
 
 // Fonction appelée lors d'un clic sur un marqueur
 function OnMarkerClick (e) {
@@ -166,6 +174,10 @@ function OnMarkerClick (e) {
   xhr.open('GET','/description/'+idnum,true);
   xhr.send();
 }
+
+
+
+
 </script>
 
 <div id="country_data" class="hidden">
